--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,17 +20,49 @@ jobs:
 
     - name: Build Windows executable
       run: |
+        go mod tidy
         GOOS=windows GOARCH=amd64 go build -o push-${{github.run_number}}.exe
       # You can customize the output name or add additional build steps if needed
 
-    - name: Upload Windows executable
-      uses: actions/upload-artifact@v3
-      with:
-        name: windows-executable
-        path: push-${{github.run_number}}.exe
-
-    - name: Create Release
-        uses: ncipollo/release-action@v1.10.0
+   # Upload the build artifact
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
         with:
-          tag: path_go.${{github.run_number}}
-          artifacts:  push-${{github.run_number}}.exe
+          name: push-windows-exe
+          path: push.exe
+
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      # Checkout the code
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # Download the artifact from the build job
+      - name: Download build artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: push-windows-exe
+
+      # Create a release
+      - name: Create GitHub Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: v${{ github.run_number }} # Use the run number as the version
+          release_name: "Release v${{ github.run_number }}"
+          draft: false
+          prerelease: false
+
+      # Upload the .exe to the release
+      - name: Upload .exe to release
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: push.exe
+          asset_name: push-v${{ github.run_number }}.exe
+          asset_content_type: application/octet-stream
