--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - master
+permissions:
+  contents: write # This gives the workflow access to create releases
 
 jobs:
   build:
